<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">

    <TextView
        android:id="@+id/scoreText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/helpButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ProgressBar
        android:id="@+id/progressBar3"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:indeterminateBehavior="cycle"
        android:indeterminateDuration="3000"
        android:progressTint="#2196F3"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonObserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:contentDescription="@string/Action_Monitor"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonBlood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_CheckBlood"
        app:backgroundTint="#FF4081"
        app:layout_constraintBottom_toBottomOf="@+id/ActionButtonCheckCons"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.88"
        app:srcCompat="@drawable/baseline_water_drop_24" />

    <TextView
        android:id="@+id/textViewName3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/UserName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonHot"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="124dp"
        android:clickable="true"
        android:contentDescription="@string/Action_Warm"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toStartOf="@+id/ActionButtonCPR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_local_fire_department_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCheckBreath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_CheckBreathing"
        app:backgroundTint="#FF4081"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.567"
        app:srcCompat="@drawable/baseline_air_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCheckCons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_CheckConsciousness"
        app:backgroundTint="#FF4081"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:srcCompat="@drawable/alert_square_svgrepo_com" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCPR"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:contentDescription="@string/Action_CPR"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toStartOf="@+id/ActionButtonCall999"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_double_arrow_down_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonSafety"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:clickable="true"
        android:contentDescription="@string/Action_CheckSafety"
        android:alpha="0.6"
        app:backgroundTint="#FF4081"
        app:layout_constraintBottom_toBottomOf="@+id/ActionButtonCheckCons"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.819"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.06"
        app:srcCompat="@drawable/baseline_warning_24" />

    <Button
        android:id="@+id/backButton3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#9575CD"
        android:text="@string/back_to_main_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/Scene3Name"
        android:textColorLink="#ffd0bcff"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/progressBar3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName3"
        app:layout_constraintVertical_bias="0.056" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="366dp"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/cold" />

    <Button
        android:id="@+id/helpButton3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#9575CD"
        android:text="@string/help"
        android:textColorLink="#ffd0bcff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCall999"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:contentDescription="@string/Action_Call999"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toStartOf="@+id/ActionButtonObserve"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

</androidx.constraintlayout.widget.ConstraintLayout>