<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F7F7F7">


    <TextView
        android:id="@+id/scoreText4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:text="@string/score"
        app:layout_constraintBottom_toTopOf="@+id/helpButtonScene4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.2" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:indeterminateBehavior="cycle"
        android:indeterminateDuration="3000"
        android:progressTint="#2196F3"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonBackBlows"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_BackBlows"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.604"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/baseline_waving_hand_24" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="339dp"
        android:layout_height="366dp"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/cough" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonObserve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:contentDescription="@string/Action_Monitor"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_remove_red_eye_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonHeimlich"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_Heimlich"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.802"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/baseline_skip_previous_24" />

    <TextView
        android:id="@+id/textViewName4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        android:text="@string/UserName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonEncourage"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="124dp"
        android:clickable="true"
        android:contentDescription="@string/Action_Cough"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toStartOf="@+id/ActionButtonCPR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_textsms_24" />


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCheckAirway"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_CheckAirways"
        app:backgroundTint="#FF4081"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.173"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.535"
        app:srcCompat="@drawable/baseline_air_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCPR"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="36dp"
        android:clickable="true"
        android:contentDescription="@string/Action_CPR"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toStartOf="@+id/ActionButtonCall999"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_keyboard_double_arrow_down_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonSafety"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/Action_CheckSafety"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:srcCompat="@drawable/baseline_warning_24" />

    <Button
        android:id="@+id/backButtonScene4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:backgroundTint="#9575CD"
        android:text="@string/back_to_main_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:text="@string/Scene4Name"
        android:textColorLink="#ffd0bcff"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewName4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="339dp"
        android:layout_height="366dp"
        android:alpha="0.8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.498"
        app:srcCompat="@drawable/cough" />

    <Button
        android:id="@+id/helpButtonScene4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:backgroundTint="#9575CD"
        android:text="@string/help"
        android:textColorLink="#ffd0bcff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/ActionButtonCall999"
        android:layout_width="97dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="28dp"
        android:clickable="true"
        android:contentDescription="@string/Action_Call999"
        app:backgroundTint="#FF4081"
        app:layout_constraintEnd_toStartOf="@+id/ActionButtonObserve"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/stat_sys_phone_call" />

</androidx.constraintlayout.widget.ConstraintLayout>