<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:backgroundTint="@color/white">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="38dp"
        android:text="@string/UserName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backButtonGame"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:backgroundTint="#434A8E"
        android:text="@string/back_to_main_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/timeButton"
        android:layout_width="120dp"
        android:layout_height="104dp"
        android:layout_marginBottom="28dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/timeButton"
        android:text="@string/start_button"
        android:textAlignment="center"
        android:visibility="visible"
        app:backgroundTint="#2A131C"
        app:layout_constraintBottom_toTopOf="@+id/imageGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        app:layout_constraintVertical_bias="0.793" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/pushButton"
        android:layout_width="114dp"
        android:layout_height="114dp"
        android:alpha="0.6"
        android:clickable="true"
        android:contentDescription="@string/pushbutton_game"
        android:visibility="visible"
        app:backgroundTint="#F06292"
        app:layout_constraintBottom_toTopOf="@+id/backButtonGame"
        app:layout_constraintEnd_toEndOf="@+id/imageGame"
        app:layout_constraintHorizontal_bias="0.595"
        app:layout_constraintStart_toStartOf="@+id/imageGame"
        app:layout_constraintTop_toBottomOf="@+id/timeButton"
        app:layout_constraintVertical_bias="0.471" />

    <ImageView
        android:id="@+id/imageGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/fathom" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_button"
        app:layout_constraintBottom_toBottomOf="@+id/timeButton"
        app:layout_constraintEnd_toEndOf="@+id/timeButton"
        app:layout_constraintStart_toStartOf="@+id/timeButton"
        app:layout_constraintTop_toTopOf="@+id/timeButton" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/game_description"
        android:textAlignment="center"
        android:textColor="#F06292"
        android:textColorHint="#F06292"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/backButtonGame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageGame" />

</androidx.constraintlayout.widget.ConstraintLayout>